Project

General

Profile

Bug #51842

upmap verify failed with pool size decreased

Added by huang jun over 1 year ago. Updated 8 months ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
OSDMap
Target version:
% Done:

0%

Source:
Tags:
backport_processed
Backport:
octopus, pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

we have a replicated pool with 3 osds, pool size is 3

ID CLASS WEIGHT  TYPE NAME              
-5       3.00000 root infra-1706        
-4       1.00000     host host-0        
 0       1.00000         osd.0          
-6       1.00000     host host-1        
 1       1.00000         osd.1          
-7       1.00000     host host-2        
 2       1.00000         osd.2 

with rule:

    "rule": {
        "rule_id": 1,
        "rule_name": "infra-1706",
        "ruleset": 1,
        "type": 1,
        "min_size": 1,
        "max_size": 20,
        "steps": [
            {
                "op": "set_chooseleaf_tries",
                "num": 5
            },
            {
                "op": "set_choose_tries",
                "num": 100
            },
            {
                "op": "take",
                "item": -5,
                "item_name": "infra-1706" 
            },
            {
                "op": "chooseleaf_firstn",
                "num": 0,
                "type": "osd" 
            },
            {
                "op": "emit" 
            }
        ]
    }

and upmap settings

pg_upmap 1.3 [1,0,2]
pg_upmap 1.4 [1,2,0]
pg_upmap 1.6 [1,2,0]

after set the pool size to 1
the pg upmap recordings are not cleared,
which cause these 3 pgs in active state


Related issues

Copied to Ceph - Backport #51908: octopus: upmap verify failed with pool size decreased Resolved
Copied to Ceph - Backport #51909: pacific: upmap verify failed with pool size decreased Resolved

History

#1 Updated by huang jun over 1 year ago

changelog:
the crush rule shoule be:

    "rule": {
        "rule_id": 1,
        "rule_name": "infra-1706",
        "ruleset": 1,
        "type": 1,
        "min_size": 1,
        "max_size": 20,
        "steps": [
            {
                "op": "set_chooseleaf_tries",
                "num": 5
            },
            {
                "op": "set_choose_tries",
                "num": 100
            },
            {
                "op": "take",
                "item": -5,
                "item_name": "infra-1706" 
            },
            {
                "op": "chooseleaf_firstn",
                "num": 3,
                "type": "host" 
            },
            {
                "op": "emit" 
            }
        ]
    }

#2 Updated by Kefu Chai over 1 year ago

  • Status changed from New to Fix Under Review
  • Backport set to octopustopus, pacific
  • Pull request ID set to 42495

#3 Updated by Kefu Chai over 1 year ago

  • Status changed from Fix Under Review to Pending Backport

#4 Updated by Kefu Chai over 1 year ago

  • Backport changed from octopustopus, pacific to octopus, pacific

#5 Updated by Backport Bot over 1 year ago

  • Copied to Backport #51908: octopus: upmap verify failed with pool size decreased added

#6 Updated by Backport Bot over 1 year ago

  • Copied to Backport #51909: pacific: upmap verify failed with pool size decreased added

#7 Updated by Backport Bot 8 months ago

  • Tags set to backport_processed

#8 Updated by Konstantin Shalygin 8 months ago

  • Status changed from Pending Backport to Resolved

Also available in: Atom PDF