crush: cancel upmaps with up set size > pool size

Fixes: https://tracker.ceph.com/issues/51842

Signed-off-by: huangjun <huangjun@xsky.com>